@@ -1812,7 +1812,7 @@ cmd_search(ClientData	clientData,
     if (gedp == GED_NULL)
 	return TCL_OK;
 
-    ret = ged_search_cmd(gedp, argc, (const char **)argv);
+    ret = ged_search(gedp, argc, (const char **)argv);
     Tcl_DStringInit(&ds);
     Tcl_DStringAppend(&ds, bu_vls_addr(&gedp->ged_result_str), -1);
     Tcl_DStringResult(interp, &ds);
